syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.api.service;

import "CredCommon.proto";
import "MFTAgentStubs.proto";

message CallbackEndpoint {
    enum CallbackType {
        HTTP = 0;
        KAFKA = 1;
    }
    CallbackType type = 1;
    string endpoint = 2;
}

message TransferApiRequest {
    string sourcePath = 1;
    string sourceStorageId = 2;
    string sourceToken = 3;
    string destinationPath = 4;
    string destinationStorageId = 5;
    string destinationToken = 6;
    bool affinityTransfer = 7;
    map<string, int32> targetAgents = 8;
    org.apache.airavata.mft.common.AuthToken mftAuthorizationToken = 9;
    repeated CallbackEndpoint callbackEndpoints = 10;
}

message TransferApiResponse {
    string transferId = 1;
}

message BatchTransferApiRequest {
    repeated TransferApiRequest transferRequests = 1;
}

message BatchTransferApiResponse {
    repeated string transferIds = 1;
}

message HttpUploadApiRequest {
    string destinationStorageId = 1;
    string resourcePath = 2;
    string destinationToken = 3;
    string targetAgent = 5;
    org.apache.airavata.mft.common.AuthToken mftAuthorizationToken = 6;
}

message HttpUploadApiResponse {
    string url = 1;
    string targetAgent = 2;
}

message HttpDownloadApiRequest {
    string resourcePath = 1;
    string sourceStorageId = 2;
    string sourceToken = 3;
    string targetAgent = 5;
    org.apache.airavata.mft.common.AuthToken mftAuthorizationToken = 6;
}

message HttpDownloadApiResponse {
    string url = 1;
    string targetAgent = 2;
}

message TransferStateApiRequest {
    string transferId = 1;
    org.apache.airavata.mft.common.AuthToken mftAuthorizationToken = 2;
}

message TransferStateApiResponse {
    string state = 1;
    int64 updateTimeMils = 2;
    double percentage = 3;
    string description = 4;
}

message ResourceAvailabilityResponse {
    bool available = 1;
}

message GetResourceMetadataFromIDsRequest {
    string resourcePath = 1;
    string storageId = 2;
    string secretId = 3;
}

message FetchResourceMetadataRequest {
    oneof request {
        org.apache.airavata.mft.agent.stub.GetResourceMetadataRequest directRequest = 1;
        GetResourceMetadataFromIDsRequest idRequest = 2;
    }
    org.apache.airavata.mft.common.AuthToken mftAuthorizationToken = 3;
}

service  MFTTransferService {

    rpc submitTransfer(TransferApiRequest) returns (TransferApiResponse);

    rpc submitBatchTransfer(BatchTransferApiRequest) returns (BatchTransferApiResponse);

    rpc submitHttpUpload(HttpUploadApiRequest) returns (HttpUploadApiResponse);

    rpc submitHttpDownload(HttpDownloadApiRequest) returns (HttpDownloadApiResponse);

    rpc getTransferStates(TransferStateApiRequest) returns (stream TransferStateApiResponse);

    rpc getTransferState(TransferStateApiRequest) returns (TransferStateApiResponse);

    rpc getResourceAvailability(FetchResourceMetadataRequest) returns (ResourceAvailabilityResponse);

    rpc resourceMetadata(FetchResourceMetadataRequest) returns (org.apache.airavata.mft.agent.stub.ResourceMetadata);

}